--- a/src/App.css
+++ b/src/App.css
@@ -2,37 +2,32 @@
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.posts {
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  height: auto;
+  margin:1%
 }
 
-.App-link {
-  color: #61dafb;
+.post {
+  border-top: solid;
+  border-bottom: solid ;
+  border-width: 1px;
+  border-color: #a6a6a6;
+  width: 600px;
+  margin: 1%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+h4{
+  text-align: left;
+  padding-left: 100px;
+}
+
+.datetime{
+  text-align: left;
+  padding-left: 100px;
+  margin-top: 0%;
+  color: #6e6e6e;
 }
