--- a/src/App.css
+++ b/src/App.css
@@ -28,8 +28,11 @@ h4{
 .datetime{
   text-align: left;
   padding-left: 100px;
-  margin-top: 0%;
+  padding-bottom: 10px;
   color: #6e6e6e;
+  border-bottom: solid;
+  border-width: 1px;
+  border-color: #a6a6a6;
 }
 
 .comment{
@@ -46,7 +49,6 @@ h4{
 
 .comment-div{
   background-color: #ececec4b;
-  border-bottom: solid;
   border-top: solid;
   border-width: 1px;
   border-color: #c2c2c26e;
@@ -55,11 +57,6 @@ h4{
   height: auto;
 }
 
-.caption{
-  border-bottom: solid;
-  border-width: 1px;
-  padding-bottom: 20px;
-}
 
 .new-post-button{
   margin-top: 2%;
@@ -79,4 +76,78 @@ h4{
   transform: scale(110%);
 }
 
+.post-form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 150px;
+}
 
+.name-input{
+  border: solid;
+  border: #818181cb;
+  padding: 5px;
+  font-size: 18px;
+}
+
+.name-input:focus{
+  outline: #d8d8d875;
+  background-color: #d8d8d875;
+}
+
+.name-input:focus::placeholder{
+  color: black;
+}
+
+
+.image-input{
+  border: solid;
+  border: #ececec91;
+  padding: 5px;
+  font-size: 18px;
+}
+
+.image-input:focus{
+  outline: #d8d8d875;
+  background-color: #d8d8d875;
+}
+
+.image-input:focus::placeholder{
+  color: black;
+}
+.caption-input{
+  border: solid;
+  border: #ececec91;
+  padding: 5px;
+  font-size: 18px;
+}
+.caption-input:focus{
+  outline: #d8d8d875;
+  background-color: #d8d8d875;
+}
+
+.caption-input:focus::placeholder{
+  color: black;
+}
+.post-button{
+  margin-top: 1%;
+  padding: 8px;
+  border-radius: 16px;
+  border: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 15px;
+  letter-spacing: 1px;
+  font-weight: 550;
+  transition: 200ms;
+}
+
+.post-button:enabled{
+  background-color: rgb(180, 213, 252);
+}
+
+.post-h{
+  border-bottom: solid;
+  border-bottom-width: 1px;
+  border-bottom-color: #a6a6a628;
+}
