--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@300&family=IBM+Plex+Serif&family=Quicksand:wght@500&display=swap');
+
 .App {
   text-align: center;
 }
@@ -27,6 +31,8 @@ body {
 .user-name{
   text-align: left;
   padding-left: 25px;
+  font-family: 'Quicksand', sans-serif;
+  font-size: xx-large;
 }
 
 h4{
@@ -48,6 +54,7 @@ h4{
   margin-top: 0%;
   text-align: left;
   padding-left: 9.5%;
+  font-family: 'IBM Plex Serif', serif;
 }
 
 .name{
@@ -59,6 +66,8 @@ h4{
 .caption{
   text-align: left;
   padding-left: 17%;
+  font-family: 'IBM Plex Serif', serif;
+  font-size: large;
 }
 
 .comment-div{
@@ -169,8 +178,8 @@ h4{
 .edit {
   position: relative;
   width: 4%;
-  left: 550px;
-  bottom: 30px;
+  left: 560px;
+  bottom: -20px;
   padding: 0;
   border: none;
   background: none;
@@ -180,8 +189,9 @@ h4{
 
 .delete {
   position: relative;
-  bottom: 85px;
-  padding: 0;
+  left: 550px;
+  bottom: 105px;
+  padding: 12px;
   border: none;
   width: 4%;
   background: none;
